Added Programs page.

--- a/programs/1_PrimeNumber.html
+++ b/programs/1_PrimeNumber.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../common/banner.css">
-
+	<link rel="stylesheet" href="../common/code.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <div class="container">
+	<iframe src="..\common\banner.html" width="100%" height="110"></iframe>
 
+    <div class="container">
         <!-- Section 1: Problem Statement -->
         <section>
-            <h1>Problem Statement: Check whether the given number is Prime Number.</h1>
+            <h1>Write a program to check whether the given number is Prime Number.</h1>
             <p>A prime number is a natural number greater than 1 that has no positive divisors other than 1 and itself.
                The task is to write a Java program that determines if a given number is prime or not.</p>
         </section>
@@ -73,6 +70,7 @@ public class PrimeChecker {
         <!-- Section 5: Variable Description -->
         <section>
             <h2>Variable Description</h2>
+			<br>
             <table class="variable-description">
                 <thead>
                     <tr>
@@ -90,7 +88,10 @@ public class PrimeChecker {
                 </tbody>
             </table>
         </section>
-    </div>
-</body>
+    </div>	
 
+
+	<iframe src="..\common\footer.html" width="100%" height="60"></iframe>	
+</body>
 </html>
+
