--- a/programs/AllPrograms.html
+++ b/programs/AllPrograms.html
@@ -21,29 +21,29 @@
         </thead>
         <tbody>
             <tr>
-                <td>1.</td>
+                <td style="text-align: center;">1.</td>
                 <td>Java Program to Check whether a given number is a Prime Number.</td>
-                <td class="button-container"><a href="1_PrimeNumber.html" target="_blank"  download><button class="download-btn">Get Code and Description</button></a></td>
+                <td class="button-container"><a href="1_PrimeNumber.html" target="_blank"  download><button class="download-btn">View Solution</button></a></td>
             </tr>
             <tr>
-				<td>2.</td>
-                <td>2020</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
+				<td style="text-align: center;">2.</td>
+                <td>Java Program to Check whether a given number is a Spy Number.</td>
+                 <td class="button-container"><a href="2_SpyNumbers.html" target="_blank" download><button class="download-btn">View Solution</button></a></td>
             </tr>
             <tr>
-				<td>3</td>			
-                <td>2021</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
+				<td style="text-align: center;">3</td>			
+                <td>Java Program to Check whether a given string is a Palindrome.</td>
+                 <td class="button-container"><a href="3_Palindrome.html" target="_blank" download><button class="download-btn">View Solution</button></a></td>
             </tr>
             <tr>
-				<td>4.</td>			
-                <td>2022</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
+				<td style="text-align: center;">4.</td>			
+                <td>Java Program to find reverse of a given number.</td>
+                 <td class="button-container"><a href="4_ReverseNumber.html"  target="_blank" download><button class="download-btn">View Solution</button></a></td>
             </tr>
             <tr>
-				<td>5.</td>			
+				<td style="text-align: center;">5.</td>			
                 <td>2023</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
+                 <td class="button-container"><a href="files/2019_file1.txt" target="_blank" download><button class="download-btn">View Solution</button></a></td>
             </tr>
         </tbody>
     </table> 
