--- a/programs/1_PrimeNumber.html
+++ b/programs/1_PrimeNumber.html
@@ -63,7 +63,7 @@ public class PrimeChecker {
 
         <!-- Section 4: Program Description -->
         <section>
-            <h2>Program Description</h2>
+            <h2>Solution Description</h2>
             <p>This Java program checks if a given integer is a prime number. It uses a method named <code>isPrime</code> which takes an integer as input and returns a boolean value indicating whether the number is prime. The program checks divisibility from 2 up to the square root of the number to determine if it has any divisors other than 1 and itself.</p>
         </section>
 
@@ -91,7 +91,7 @@ public class PrimeChecker {
     </div>	
 
 
-	<iframe src="..\common\footer.html" width="100%" height="60"></iframe>	
+	<iframe src="..\common\footer.html" width="100%" height="70"></iframe>	
 </body>
 </html>
 
