--- a/course_explore.html
+++ b/course_explore.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <title>Detailed Syllabus</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
 
+<script>
+		function openAllProgramsPage() {
+						window.open("./programs/AllPrograms.html", "_blank");
+		}
+</script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -157,7 +162,7 @@
 		</li>
 
 		<li>
-			<a href="#ninth"><b>8. Programs and More Programs.</b></a>
+			<a href="#ninth"><b>9. Programs and More Programs.</b></a>
 			<ul>
 				<li><a href="#ninth-a">a. Hands on Programming Exersises.</a></li>
 				<ul><a href="#ninth-a1">&nbsp;&nbsp;&nbsp;&nbsp;-Programs depicting the concept of pure, impure, static, non- static methods.</a></ul>
@@ -560,6 +565,7 @@
 	<br>
     <div class="container" id="seventh">
         <h3 id="seventh-a"> Programs depicting the concept of pure, impure, static, non- static methods..</h3>
+		<button class="sectionThree__left--btn dark-btn" onclick="openAllProgramsPage()">Go to Programs Page</button>
     </div>
   </section> 
  
