--- a/programs/AllPrograms.html
+++ b/programs/AllPrograms.html
@@ -27,7 +27,7 @@
             </tr>
             <tr>
 				<td style="text-align: center;">2.</td>
-                <td>Java Program to Check whether a given number is a Spy Number.</td>
+                <td>Java Program to Check whether a given number is a Spy Number. <b>(ICSE 2017)</b></td>
                  <td class="button-container"><a href="2_SpyNumbers.html" target="_blank" download><button class="download-btn">View Solution</button></a></td>
             </tr>
             <tr>
@@ -42,15 +42,19 @@
             </tr>
             <tr>
 				<td style="text-align: center;">5.</td>			
-                <td>2023</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" target="_blank" download><button class="download-btn">View Solution</button></a></td>
+                <td>Write a program  that allows a user to input 20 integer elements into an array. Once the array is populated, the program should perform the following operations. <b>(ICSE 2017)</b>
+				<p>1. Display the largest number from the array.</p>
+				<p>2. Display the smallest number from the array.</p>
+				<p>3. Display the sum of all the elements of the array.</p>
+				</td>
+                 <td class="button-container"><a href="5_MinMaxSumArray.html" target="_blank" download><button class="download-btn">View Solution</button></a></td>
             </tr>
         </tbody>
     </table> 
 
 
 
-	<iframe src="..\common\footer.html" width="100%" height="60"></iframe>	
+	<iframe src="..\common\footer.html" width="100%" height="70"></iframe>	
 </body>
 </html>
 
