--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
         function course_explore() {
             window.location.href = 'course_explore.html'; 
         }
+		function openAllProgramsPage() {
+			window.open("./programs/AllPrograms.html", "_blank");
+		}
+		function openQuestionPapersPage() {
+			window.open("./question_papers.html", "_blank");
+		}
+		function openMockPapersPage() {
+			window.open("./programs/question_papers.html", "_blank");
+		}		
 		</script>
 		
 	
@@ -55,24 +64,26 @@
     </header>
   </nav>
   
-  
-  <section class="sectionOne container">
-    <div class="sectionOne__content text-center flex">
-      <div class="sectionOne__content--label label text-green">Based on the latest ICSE syllabus</div>
-      <div class="sectionOne__content--title common-title">Solutions to last 5 years papers.</div>
-      <div class="sectionOne__content--text">Get 2 Mock Papers for practice.</div>
-    </div>
 
-    <button class="sectionOne__btn dark-btn" onclick="openSyllabusPage()">ICSE Syllabus</button>
+
+    <section class="sectionOne container">
+    <div class="sectionOne__content text-center ">
+      <button class="sectionOne__btn dark-btn" onclick="openSyllabusPage()">Based on Latest ICSE Syllabus</button>
+	  <!-- <button class="section__center--btn dark-btn">Solutions to last 5 years papers.</button> -->
+      <!-- <div class="sectionOne__content__wws--text" >Get 2 Mock Papers for practice.</div> -->
+    </div>
+    
   </section>
   
   
+  
+    
   <section class="sectionTwo container grid">
     <img src="src/images/Home/image-2.svg" alt="" class="sectionTwo responsive-image">
     <div class="sectionTwo__right flex">
       <div class="sectionTwo__right--title common-title">In depth discussion on each concept.</div>
       <div class="sectionTwo__right--text ">Thorough Exploration: Dive Deep into Each Concept with Clear, Detailed Discussions. Gain a Complete Understanding and Master the Key Ideas with Engaging, Easy-to-Follow Explanations.</div>
-      <button class="sectionTwo__right--btn dark-btn">Course Details</button>
+      <button class="sectionTwo__right--btn dark-btn" onclick="course_explore()">Course Details</button>
     </div>
   </section>
   
@@ -81,88 +92,50 @@
     <div class="sectionThree__left flex">
       <div class="sectionThree__left--title common-title">Focus on practical hands on programming.</div>
       <div class="sectionThree__left--text ">With programming making up 60% of the paper, we ensure every child grasps the concepts and can confidently write their own programs.</div>
-      <button class="sectionThree__left--btn dark-btn">Programs</button>
+      <button class="sectionThree__left--btn dark-btn" onclick="openAllProgramsPage()">Check Programs</button>
     </div>
     <img src="src/images/Home/image-3.svg" alt="" class="sectionthree__right responsive-image">
   </section>
   
-  
-  <section class="sectionFour container grid">
-     <h1>Files for Download</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Year</th>
-                <th>Question Paper</th>
-                <th>Detailed Solutions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2019</td>
-                <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
-                <td class="button-container"><a href="files/2019_file2.txt" download><button class="download-btn">Download</button></a></td>
-            </tr>
-            <tr>
-                <td>2020</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2020_file2.txt" download><button class="locked-btn">Download</button></a></td>
-            </tr>
-            <tr>
-                <td>2021</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2021_file2.txt" download><button class="locked-btn">Download</button></a></td>
-            </tr>
-            <tr>
-                <td>2022</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2022_file2.txt" download><button class="locked-btn">Download</button></a></td>
-            </tr>
-            <tr>
-                <td>2023</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2023_file2.txt" download><button class="locked-btn">Download</button></a></td>
-            </tr>
-        </tbody>
-    </table> 
-    <div class="sectionTwo__right flex">
-      <div class="sectionTwo__right--title common-title">In depth discussion on each concept.</div>
-      <div class="sectionTwo__right--text ">Thorough Exploration: Dive Deep into Each Concept with Clear, Detailed Discussions. Gain a Complete Understanding and Master the Key Ideas with Engaging, Easy-to-Follow Explanations.</div>
-      <button class="sectionTwo__right--btn dark-btn">Course Details</button>
+  <hr>
+    <section class="sectionOne container">
+    <div class="sectionOne__content text-center flex">
+	  <button class="section__center--btn dark-btn" onclick="openQuestionPapersPage()">Last 5 years Question papers and Solutions</button>
+	  <button class="section__center__disabled--btn dark-btn-disabled" onclick="openQuestionPapersPage()">Get 2 Mock Papers for practice</button>
+      <!-- <div class="sectionOne__content__wws--text" >Get 2 Mock Papers for practice.</div> -->
     </div>
-  </section>  
+  </section>
   
-  
-  <section class="sectionFour container">
-    <div class="sectionFour__content text-center">
-      <div class="secttionFour__content--label label text-green">Other Courses by Base2Ace Academy</div>
+  <!-- <section class="sectionFour container"> -->
+    <!-- <div class="sectionFour__content text-center"> -->
+      <!-- <div class="secttionFour__content--label label text-green">Other Courses by Base2Ace Academy</div> -->
       <!-- <div class="secttionFour__content--title common-title">Courses</div> -->
       <!-- <div class="secttionFour__content--text">Other Courses in the series by Base2Ace Academy.</div> -->
-    </div>
-    <div class="sectionFour__cards ">
-      <div class="sectionFour__cards--1">
-        <img src="src/images/courses/python.svg" alt="" class="responsive-image">
-        <div class="name">Python Begninners</div>
-        <div class="position">3 Months</div>
-      </div>
-      <div class="sectionFour__cards--2">  
-        <img src="src/images/courses/python_adv.svg" alt="" class="responsive-image">
-        <div class="name">Python Advanced</div>
-        <div class="position">3 Months</div>
-      </div>
-      <div class="sectionFour__cards--3">
-        <img src="src/images/courses/arduino.svg" alt="" class="responsive-image">
-        <div class="name">Arduino Begninners</div>
-        <div class="position">3 Months</div>
-      </div>
-	  <div class="sectionFour__cards--4">
-        <img src="src/images/courses/abacus.png" alt="" class="responsive-image">
-        <div class="name">Abacus</div>
-        <div class="position">10 Levels</div>
-      </div>
-    </div>
-    <button class="sectionFour__btn dark-btn" onclick="open_b2a_dot_comPage()">Learn More</button>
-  </section>
+    <!-- </div> -->
+    <!-- <div class="sectionFour__cards "> -->
+      <!-- <div class="sectionFour__cards--1"> -->
+        <!-- <img src="src/images/courses/python.svg" alt="" class="responsive-image"> -->
+        <!-- <div class="name">Python Begninners</div> -->
+        <!-- <div class="position">3 Months</div> -->
+      <!-- </div> -->
+      <!-- <div class="sectionFour__cards--2">   -->
+        <!-- <img src="src/images/courses/python_adv.svg" alt="" class="responsive-image"> -->
+        <!-- <div class="name">Python Advanced</div> -->
+        <!-- <div class="position">3 Months</div> -->
+      <!-- </div> -->
+      <!-- <div class="sectionFour__cards--3"> -->
+        <!-- <img src="src/images/courses/arduino.svg" alt="" class="responsive-image"> -->
+        <!-- <div class="name">Arduino Begninners</div> -->
+        <!-- <div class="position">3 Months</div> -->
+      <!-- </div> -->
+	  <!-- <div class="sectionFour__cards--4"> -->
+        <!-- <img src="src/images/courses/abacus.png" alt="" class="responsive-image"> -->
+        <!-- <div class="name">Abacus</div> -->
+        <!-- <div class="position">10 Levels</div> -->
+      <!-- </div> -->
+    <!-- </div> -->
+    <!-- <button class="sectionFour__btn dark-btn" onclick="open_b2a_dot_comPage()">Learn More</button> -->
+  <!-- </section> -->
   
   
   <footer class="footerWrapper">
