--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 			window.open("course_explore.html", "_blank");
             <!-- window.location.href = 'course_explore.html';  -->
         }
+        function Register() {
+			window.open("https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform", "_blank");
+        }		
 		function openAllProgramsPage() {
 			window.open("./programs/AllPrograms.html", "_blank");
 		}
@@ -59,7 +62,7 @@
       <div class="header__left flex">
         <div class="header__left--title common-title text-white">Comprehensive Java Crash Course for Std 10 (ICSE)</div>
         <div class="header__left--text">Specifically designed for class 10 ICSE students. Course covers the complete Computer Science syllabus. Emphasis on hands on programming as it comprises of 60% of the total marks. Get exam ready!</div>
-        <button class="header__left--btn white-btn"  onclick="course_explore()">Register Now.</button>
+        <button class="header__left--btn white-btn"  onclick="Register()">Register Now.</button>
       </div>
       <img src="src/images/Home/image-1.svg" alt="" class="header__right responsive-image">
     </header>
