Dowload Links changed.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <section class="sectionOne container">
     <div class="sectionOne__content text-center flex">
 	  <button class="section__center--btn dark-btn" onclick="openQuestionPapersPage()">Last 5 years Question papers and Solutions</button>
-	  <button class="section__center__disabled--btn dark-btn-disabled" onclick="openQuestionPapersPage()">Get 2 Mock Papers for practice</button>
+	  <button class="section__center--btn dark-btn" onclick="openQuestionPapersPage()">Get 2 AI generated Mock Papers.</button>
       <!-- <div class="sectionOne__content__wws--text" >Get 2 Mock Papers for practice.</div> -->
     </div>
   </section>
