--- a/question_papers.html
+++ b/question_papers.html
@@ -29,22 +29,22 @@
             <tr>
                 <td style="text-align: center;">ICSE 2019</td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_Application_2019.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2020_file2.txt" download><button class="download-btn-disabled">Download</button></a></td>
+                 <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
                 <td style="text-align: center;">ICSE 2020</td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_Application_2020.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2021_file2.txt" download><button class="download-btn-disabled">Download</button></a></td>
+                 <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
                 <td style="text-align: center;">ICSE  2022</td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_ICSE_2022.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2022_file2.txt" download><button class="download-btn-disabled">Download</button></a></td>
+                 <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
                 <td style="text-align: center;">ICSE  2023</td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_ICSE_2023.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
-                 <td class="button-container"><a href="files/2023_file2.txt" download><button class="download-btn-disabled">Download</button></a></td>
+                 <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
         </tbody>
     </table> 
@@ -63,11 +63,11 @@
         <tbody>
             <tr >
                 <td style="text-align: center;">Mock Paper 1</td>
-                <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn-disabled">Download</button></a></td>
+                <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank"  download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
                 <td style="text-align: center;">Mock Paper 2</td>
-                 <td class="button-container"><a href="files/2019_file1.txt" download><button class="download-btn-disabled">Download</button></a></td>
+                 <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
         </tbody>
     </table> 
