--- a/service - Copy.html
+++ b/service - Copy.html
@@ -234,16 +234,16 @@
 	<br>
     <div class="container" id="second">
         <h3 id="second-a">Objects and encapsulation concepts.</h3>
-        <p>Object-Oriented Programming (OOP) is a programming style that uses "objects" to represent data and methods. Key OOP principles include Encapsulation, Inheritance, Polymorphism, and Abstraction.</p>
+        <p>Object-Oriented Programming (OOP) is a programming style that uses "objects" to represent data and methods. Key OOP principles include Encapsulation, Inheritance, Polymorphism, and Abstraction. An object is an instance of a class. A class is a blueprint that defines the structure and behavior (data and methods) that the objects created from the class will have.</p>
 
         <h3 id="second-b">Member variables.</h3>
-        <p>An object is an instance of a class. A class is a blueprint that defines the structure and behavior (data and methods) that the objects created from the class will have.</p>
+        <p>Member variables, also known as instance variables, are defined within a class and represent the data or state that each instance of the class holds. They are specific to each object created from the class and are typically private to ensure encapsulation.</p>
 
         <h3 id="second-c">Attributes or features.</h3>
-        <p>In Java, data types specify the type of data that a variable can hold. Primitive data types include int, float, char, and boolean, while reference data types include classes, arrays, and interfaces.</p>
+        <p>Attributes (often synonymous with member variables) are characteristics that define the properties of a class. They represent the inherent features or data associated with an object and are key to differentiating one object from another within the same class.</p>
 
         <h3 id="second-d">Member methods.</h3>
-        <p>Operators are symbols that perform operations on variables and values. Java operators include arithmetic, assignment, comparison, logical, and unary operators.</p>
+        <p>Member methods are functions defined within a class that operate on the member variables. These methods implement the behavior of the class, performing actions or computations, and are invoked on objects to manipulate or retrieve the object's state.</p>
     </div>
   </section>  
   
