--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="index.html" class="navbar__menu--1">Home</a>
         <a href="course_explore.html"  target="_blank" class="navbar__menu--2">Course</a>
         <a href="./programs/AllPrograms.html"  target="_blank" class="navbar__menu--3">Programs</a>
-        <a href="contact.html" class="navbar__menu--4">Contact</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" class="navbar__menu--4">Contact</a>
       </div>
       <div class="navbar__icon">
         <i class="bi bi-list"></i>
