--- a/programs/AllPrograms.html
+++ b/programs/AllPrograms.html
@@ -23,7 +23,7 @@
             <tr>
                 <td style="text-align: center;">1.</td>
                 <td>Java Program to Check whether a given number is a Prime Number.</td>
-                <td class="button-container"><a href="1_PrimeNumber.html" target="_blank"><button class="download-btn">View Solution</button></a></td>
+                <td class="button-container"><a href="https://base2ace.github.io/icse-java/programs/1_PrimeNumber.html" target="_blank"><button class="download-btn">View Solution</button></a></td>
             </tr>
             <tr>
 				<td style="text-align: center;">2.</td>
