--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="navbar__menu hidden">
         <a href="index.html" class="navbar__menu--1">Home</a>
         <a href="course_explore.html"  target="_blank" class="navbar__menu--2">Course</a>
-        <a href="./programs/AllPrograms.html"  target="_blank" class="navbar__menu--3">Programs</a>
+        <a href="./programs/1_PrimeNumber.html"  target="_blank" class="navbar__menu--3">Programs</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" class="navbar__menu--4">Contact</a>
       </div>
       <div class="navbar__icon">
