--- a/programs/AllPrograms.html
+++ b/programs/AllPrograms.html
@@ -5,6 +5,12 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
+	<script>
+		function openProgramFile(filename) {
+			// Dynamically open the file passed as the argument
+			window.open("./" + filename, "_blank");
+		}	
+	</script>
 	<iframe src="..\common\banner.html" width="100%" height="110"></iframe>
 
 		 	 <br>
@@ -23,7 +29,9 @@
             <tr>
                 <td style="text-align: center;">1.</td>
                 <td>Java Program to Check whether a given number is a Prime Number.</td>
-                <td class="button-container"><a href="https://base2ace.github.io/icse-java/programs/1_PrimeNumber.html" target="_blank"><button class="download-btn">View Solution</button></a></td>
+                <td class="button-container">
+				<button class="download-btn"  onclick="openProgramFile('1_PrimeNumber.html')">View Solution</button>
+				</td>
             </tr>
             <tr>
 				<td style="text-align: center;">2.</td>
