--- a/programs/AllPrograms.html
+++ b/programs/AllPrograms.html
@@ -36,17 +36,23 @@
             <tr>
 				<td style="text-align: center;">2.</td>
                 <td>Java Program to Check whether a given number is a Spy Number. <b>(ICSE 2017)</b></td>
-                 <td class="button-container"><a href="2_SpyNumbers.html" target="_blank" download><button class="download-btn">View Solution</button></a></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="openProgramFile('2_SpyNumbers.html')">View Solution</button>
+				 </td>
             </tr>
             <tr>
 				<td style="text-align: center;">3</td>			
                 <td>Java Program to Check whether a given string is a Palindrome.</td>
-                 <td class="button-container"><a href="3_Palindrome.html" target="_blank" download><button class="download-btn">View Solution</button></a></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="openProgramFile('3_Palindrome.html')">View Solution</button>
+				 </td>
             </tr>
             <tr>
 				<td style="text-align: center;">4.</td>			
                 <td>Java Program to find reverse of a given number.</td>
-                 <td class="button-container"><a href="4_ReverseNumber.html"  target="_blank" download><button class="download-btn">View Solution</button></a></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="openProgramFile('4_ReverseNumber.html')">View Solution</button>
+				 </td>
             </tr>
             <tr>
 				<td style="text-align: center;">5.</td>			
@@ -55,7 +61,9 @@
 				<p>2. Display the smallest number from the array.</p>
 				<p>3. Display the sum of all the elements of the array.</p>
 				</td>
-                 <td class="button-container"><a href="5_MinMaxSumArray.html" target="_blank" download><button class="download-btn">View Solution</button></a></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="openProgramFile('5_MinMaxSumArray.html')">View Solution</button>
+				 </td>
             </tr>
         </tbody>
     </table> 
