--- a/course_explore.html
+++ b/course_explore.html
@@ -5,7 +5,8 @@
   <title>Detailed Syllabus</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="stylesheet" href="src/styles/designSystem.css">
+  <link rel="stylesheet" href="src/styles/index.css">
 <script>
 		function openAllProgramsPage() {
 						window.open("./programs/AllPrograms.html", "_blank");
@@ -13,9 +14,8 @@
 </script>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<nav>
 
+<nav>
 	<ul>
     <li><a href="#intro"><b>Course Contents</b></a></li>
 		<li>
@@ -564,8 +564,9 @@
     <h2>9. Programs.</h2>
 	<br>
     <div class="container" id="seventh">
-        <h3 id="seventh-a"> Programs depicting the concept of pure, impure, static, non- static methods..</h3>
-		<button class="sectionThree__left--btn dark-btn" onclick="openAllProgramsPage()">Go to Programs Page</button>
+        <h3 id="ninth-a"> Java Programs in detailed ICSE format.</h3>
+		</br>
+		<button class="download-btn" onclick="openAllProgramsPage()">Go to Programs Page</button>
     </div>
   </section> 
  
