--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 		}
 		function openMockPapersPage() {
 			window.open("./programs/question_papers.html", "_blank");
-		}		
+		}
+		
 		</script>
 		
 	
@@ -104,8 +105,8 @@
   <hr>
     <section class="sectionOne container">
     <div class="sectionOne__content text-center flex">
-	  <button class="section__center--btn dark-btn" onclick="openQuestionPapersPage()">Last 5 years Question papers and Solutions</button>
-	  <button class="section__center--btn dark-btn" onclick="openQuestionPapersPage()">Get 2 AI generated Mock Papers.</button>
+	  <button class="section__center--btn dark-btn" onclick="openQuestionPapersPage()">Last 5 years Papers with Solutions</button>
+	  <button class="section__center--btn dark-btn" onclick="openQuestionPapersPage()">2 AI generated Mock Papers.</button>
       <!-- <div class="sectionOne__content__wws--text" >Get 2 Mock Papers for practice.</div> -->
     </div>
   </section>
