--- a/programs/AllPrograms.html
+++ b/programs/AllPrograms.html
@@ -10,6 +10,9 @@
 			// Dynamically open the file passed as the argument
 			window.open("./" + filename, "_blank");
 		}	
+        function Register() {
+			window.open("https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform", "_blank");
+        }
 	</script>
 	<iframe src="..\common\banner.html" width="100%" height="110"></iframe>
 
@@ -63,6 +66,17 @@
 				</td>
                  <td class="button-container">
 				 <button class="download-btn"  onclick="openProgramFile('5_MinMaxSumArray.html')">View Solution</button>
+				 </td>
+            </tr>
+            <tr>
+				<td style="text-align: center;">6.</td>			
+                <td>Write a program to search a number using Linear Search. <b>(Important)</b>
+				<p>1. The program should accept an array of integers.</p>
+				<p>2. Accept a target value to be searched.</p>
+				<p>3. Displays Found if the number is found in the array. Print Not Found otherwise.</p>
+				</td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
 				 </td>
             </tr>
         </tbody>
