--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
   
   <footer class="footerWrapper">
     <div class="footerLinks container">
-      <div class="footerLinks__socials">
-        <img src="src/images/socials/facebook.svg" alt="">
-        <img src="src/images/socials/instagram.svg" alt="">
-        <img src="src/images/socials/twitter.svg" alt="">
-        <img src="src/images/socials/tiktok.svg" alt="">
-        <img src="src/images/socials/pinterest.svg" alt="">
-        <img src="src/images/socials/whatsapp.svg" alt="">
-        <img src="src/images/socials/youtube.svg" alt="">
-      </div>
+      <!-- <div class="footerLinks__socials"> -->
+        <!-- <img src="src/images/socials/facebook.svg" alt=""> -->
+        <!-- <img src="src/images/socials/instagram.svg" alt=""> -->
+        <!-- <img src="src/images/socials/twitter.svg" alt=""> -->
+        <!-- <img src="src/images/socials/tiktok.svg" alt=""> -->
+        <!-- <img src="src/images/socials/pinterest.svg" alt=""> -->
+        <!-- <img src="src/images/socials/whatsapp.svg" alt=""> -->
+        <!-- <img src="src/images/socials/youtube.svg" alt=""> -->
+      <!-- </div> -->
       <div class="footerLinks__copyright text-white text-center">© Base2Ace Academy. An ISO 9001:2015 Certified Company.</div>
     </div>
   </footer>
