--- a/question_papers.html
+++ b/question_papers.html
@@ -9,7 +9,7 @@
 
 		 	 <br>
 			 	 <br>
-     <h1 style="text-align: center;">Programs to be covered as part of the Comprehensive Course.</h1>
+     <h1 style="text-align: center;">Previous Years Question Papers and Solutions.</h1>
 	 <br>
 
     <table>
@@ -22,27 +22,27 @@
         </thead>
         <tbody>
             <tr >
-                <td style="text-align: center;">ICSE 2018</td>
+                <td style="text-align: center;"><b>ICSE 2018</b></td>
                 <td class="button-container"><a href="./src/docs/papers/Computer_Application_2018.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
-                <td class="button-container"><a href="files/2019_file2.txt" download><button class="download-btn">Download</button></a></td>
+                <td class="button-container"><a href="./src/answers/Solution_2018.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;">ICSE 2019</td>
+                <td style="text-align: center;"><b>ICSE 2019</b></td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_Application_2019.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
                  <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;">ICSE 2020</td>
+                <td style="text-align: center;"><b>ICSE 2020</b></td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_Application_2020.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
                  <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;">ICSE  2022</td>
+                <td style="text-align: center;"><b>ICSE  2022</b></td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_ICSE_2022.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
                  <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;">ICSE  2023</td>
+                <td style="text-align: center;"><b>ICSE  2023</b></td>
                  <td class="button-container"><a href="./src/docs/papers/Computer_ICSE_2023.pdf" target="_blank" download><button class="download-btn">Download</button></a></td>
                  <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
@@ -50,7 +50,8 @@
     </table> 
 	 
 	 <br>
-     <h1 style="text-align: center;">Mock Question Papers for Practice.</h1>
+	 <br>
+     <h1 style="text-align: center;">AI Generated Mock Question Papers for Practice.</h1>
 	 <br>
 
     <table>
@@ -62,17 +63,21 @@
         </thead>
         <tbody>
             <tr >
-                <td style="text-align: center;">Mock Paper 1</td>
+                <td style="text-align: center;"><b>Mock Paper 1</b></td>
                 <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank"  download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
             <tr>
-                <td style="text-align: center;">Mock Paper 2</td>
+                <td style="text-align: center;"><b>Mock Paper 2</b></td>
                  <td class="button-container"><a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" download><button class="download-btn-disabled">Download</button></a></td>
             </tr>
         </tbody>
     </table> 
-	
-
+	 <br>
+	 <br>
+	 <br>
+	 <br>
+	 <br>
+	 <br>
 	<iframe src=".\common\footer.html" width="100%" height="70"></iframe>	
 </body>
 </html>
