--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		
 	
       <div class="header__left flex">
-        <div class="header__left--title common-title text-white">Comprehensive Java Crash Course for Std 10 (ICSE)</div>
+        <div class="header__left--title common-title text-white">Comprehensive Java Course for Std 10 ICSE Board Exams.</div>
         <div class="header__left--text">Specifically designed for class 10 ICSE students. Course covers the complete Computer Science syllabus. Emphasis on hands on programming as it comprises of 60% of the total marks. Get exam ready!</div>
         <button class="header__left--btn white-btn"  onclick="Register()">Register Now.</button>
       </div>
