--- a/programs/AllPrograms.html
+++ b/programs/AllPrograms.html
@@ -18,7 +18,7 @@
 
 		 	 <br>
 			 	 <br>
-     <h1 style="text-align: center;">Programs to be covered as part of the Comprehensive Course.</h1>
+     <h1 style="text-align: center;">Some of the Programs to be covered as part of the Comprehensive Course.</h1>
 	 <br>
     <table>
         <thead class="variable-description">
@@ -79,6 +79,116 @@
 				 <button class="download-btn"  onclick="Register()">View Solution</button>
 				 </td>
             </tr>
+            <tr>
+				<td style="text-align: center;">7.</td>			
+                <td><b>Design a class RailwayTicket with following description.</b>
+            <p><i>Instance variables/data members.</i></p>
+            <p> String name : To store the name of the customer.</p>
+			<p> String coach : To store the type of coach customer wants to travel.</p>
+			<p> long mobno : To store customer’s mobile number.</p>
+			<p> int amt : To store basic amount of ticket.</p>
+			<p> int totalamt : To store the amount to be paid after updating the original amount.</p>
+            <p><i>Member methods :</i></p>
+            <p> void accept () – To take input for name, coach, mobile number and amount.</p>
+			<p> void update() – To update the amount as per the coach selected.</p>
+			<p> extra amount to be added in the amount as follows)</p>
+            <p><i>Type of Coaches Amount</i></p>
+            <p> First_AC = 700</p>
+			<p> Second_AC = 500</p>
+            <p> Third_AC = 250</p>
+			<p> sleeper = None</p>
+			<p> void display() – To display all details of a customer such as name, coach, total amount and mobile number.</p>
+			<p> Write a main method to create an object of the class and call the above member methods.</p>
+				</td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>
+            <tr>
+				<td style="text-align: center;">8.</td>			
+                <td>Write a program to input a number and check and print whether it is a Pronic number or not. <b>(ICSE 2018)</b>
+				<p> Pronic number is the number which is the product of two consecutive integers.</p>
+				</td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>
+            <tr>
+				<td style="text-align: center;">9.</td>			
+                <td>Write a program in Java to accept a string in lower case and change the first letter of every word to upper case. Display the new string.</b>
+				<p> <b>Sample input:</b> we are in cyber world</p>
+				<p> <b>Sample output:</b> We Are In Cyber World</p>
+				</td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>
+            <tr>
+				<td style="text-align: center;">10.</td>			
+                <td>Design a class to overload a function volume() as follows.</b>
+				<p>(i) double volume (double R) – with radius (R) as an argument, returns the volume of sphere using the formula.</p>
+				<p> <b>V = 4/3 x 22/7 x R <sup>3</sup></b></p>
+
+				<p>(ii) double volume (double H, double R) – with height(H) and radius(R) as the arguments, returns the volume of a cylinder using the formula.</p>
+				<p> <b>V = 22/7 x R <sup>2</sup> x H</b></p>
+
+				<p>(iii) double volume (double L, double B, double H) – with length(L), breadth(B) and Height(H) as the arguments, returns the volume of a cuboid using the formula.</p>
+				<p> <b>V = L x B x H</b></p>
+
+				</td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>
+
+            <tr>
+				<td style="text-align: center;">11.</td>			
+                <td>Write a menu driven program to display the pattern as per user’s choice.</b>
+				<p>Pattern-1 Pattern-2</p>
+				</b>
+				<p>ABCDE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; B</p>
+				<p>ABCD&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; LL</p>
+				<p>ABC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; UUU</p>
+				<p>AB&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; EEEE</p>
+				<p>A&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+				<p>For an incorrect option, an appropriate error message should be displayed.</p>
+				</td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>			
+
+            <tr>
+				<td style="text-align: center;">12.</td>			
+                <td><h3>Many more programs to be covered to make you exam ready.<h3></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>	
+
+            <tr>
+				<td style="text-align: center;">13.</td>			
+                <td><h3>Many more programs to be covered to make you exam ready.<h3></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>	
+
+            <tr>
+				<td style="text-align: center;">14.</td>			
+                <td><h3>Many more programs to be covered to make you exam ready.<h3></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>	
+
+            <tr>
+				<td style="text-align: center;">15.</td>			
+                <td><h3>Many more programs to be covered to make you exam ready.<h3></td>
+                 <td class="button-container">
+				 <button class="download-btn"  onclick="Register()">View Solution</button>
+				 </td>
+            </tr>				
         </tbody>
     </table> 
 
