--- a/course_explore.html
+++ b/course_explore.html
@@ -199,7 +199,7 @@
   
   <!-- <div class="subheading">Detailed Course Contents.</div> -->
   <!-- <br> -->
-  <h1>Quick Revision of the Syllabus.</h1>
+  <h1>Detailed overview of the Syllabus.</h1>
   
   <section id="intro">
     <h2>1. Revision of Class IX Syllabus.</h2>
