--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="navbar__menu hidden">
         <a href="index.html" class="navbar__menu--1">Home</a>
-        <a href="course_explore.html"  target="_blank" class="navbar__menu--2">Course</a>
+        <a href="courses.html"  target="_blank" class="navbar__menu--2">Course</a>
         <a href="./programs/AllPrograms.html"  target="_blank" class="navbar__menu--3">Programs</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLScNHsZOApgSz2MQ1JQEpjORMC9wlRosrxJRGcqW9smfDr6BSg/viewform" target="_blank" class="navbar__menu--4">Contact</a>
       </div>
@@ -41,7 +41,7 @@
             window.open("https://base2ace.com", "_blank");
         }
         function course_explore() {
-			window.open("course_explore.html", "_blank");
+			window.open("courses.html", "_blank");
             <!-- window.location.href = 'course_explore.html';  -->
         }
         function Register() {
